# obs-guide-overlay

./: CMakeLists.txt  INSTALAR.md  build.bat  build_installer.bat  build_windows.ps1  buildspec.json  cmake_build.sh  compile2.sh  fetch_headers.py  installer.iss  installer.nsi  make_libs.py
.github/workflows/: main.yml
data/locale/: en-US.ini
src/: guide-overlay.c
